2008-04-27  Evan Monroig  <evan.monroig@gmail.com>

	* fnv-matrix.lisp (matrix-type-to-fnv-type): add documentation

	* fnv-vector.lisp (vector-dimension, vref)
	(fnv-type-to-vector-type, slice, vector-type-to-fnv-type): put
	docstring in DEFGENERIC form

	* fnv-matrix.lisp (matrix-dimension, matrix-dimensions)
	(flatten-matrix-indices, mref, orientation)
	(fnv-type-to-matrix-type): move docstring to a DEFGENERIC form
	(window, transpose, strides): move docstring to a DEFGENERIC form
	(nelts, matrix-type-to-fnv-type, unit-stride-p, fnv-type): move
	docstring to a DEFGENERIC form
	(make-typed-matrix): fixed calls to MAKE-SYMBOL*
	(orientation): add documentation

	* lisp-matrix.asd (lisp-matrix, operation-done-p): automatically
	run tests when calling (ASDF:OOS 'ASDF:TEST-OP 'LISP-MATRIX)

	* tests.lisp (tests): add root test suite

	* fnv-vector.lisp (make-typed-vector): replace NCAT by
	MAKE-SYMBOL*

	* fnv-matrix.lisp (make-typed-matrix): replace NCAT by
	MAKE-SYMBOL*

	* package.lisp (:lisp-matrix): don't import NCAT

	* utils.lisp (make-symbol*): add simple utility to replace NCAT

2008-04-24  Evan Monroig  <evan.monroig@gmail.com>

	* tests.lisp (test-matrix-size): helper function
	(make-matrix-double-1, make-matrix-double-2)
	(make-matrix-double-3, transpose-double): added basic tests

	* lisp-matrix.asd (lisp-matrix): add dependency on fiveam

	* package.lisp (:lisp-matrix): remove dependency on ASDF
	(:lisp-matrix): add dependency on FIVEAM

	* fnv-vector.lisp (make-vector): don't use argument
	INITIAL-ELEMENT-P

	* fnv-matrix.lisp (make-matrix): don't use argument
	INITIAL-ELEMENT-P

	* fnv-vector.lisp (initialize-instance): remove call to next
	method

	* fnv-matrix.lisp (initialize-instance): remove call to next
	method

	* macros.lisp (define-abstract-class): use EQL with TYPE-OF
	instead of TYPEP which is too inclusive

	* fnv-matrix.lisp (matrix-like, matview): modify readers, order of
	slots and options as for vector types