@@ -19,6 +19,15 @@
 
 (in-suite matrix-double)
 
+(defun random-array (n m)
+  "Return a random 2D array of size N x M."
+  (make-array (list n m)
+              :element-type 'double-float
+              :initial-contents
+              (loop for i below n collect
+                   (loop for j below m collect
+                        (random 1d0)))))
+
 (defun test-matrix-size (matrix n m)
   "test all size functions of MATRIX against N and M"
   (is (= (nrows matrix) n))
@@ -26,6 +35,8 @@
   (is (= (nelts matrix) (* n m)))
   (is (= (matrix-dimension matrix 0) n))
   (is (= (matrix-dimension matrix 1) m))
+  (signals error (matrix-dimension matrix 2))
+  (signals error (matrix-dimension matrix -1))
   (is (equal (matrix-dimensions matrix)
 	     (list n m))))
 
@@ -57,12 +68,7 @@
 (test make-matrix-double-3 "set initial contents"
   (for-all ((n (gen-integer :min 0 :max 100))
 	    (m (gen-integer :min 0 :max 100)))
-    (let ((array (make-array (list n m)
-			     :element-type 'double-float
-			     :initial-contents
-			     (loop for i below n collect
-				  (loop for j below m collect
-				       (random 1d0)))))	  
+    (let ((array (random-array n m))	  
 	  matrix)
      (finishes (setq matrix (make-matrix n m 'double
 					 :initial-contents array)))
@@ -76,14 +82,9 @@
 (test transpose-double  
   (for-all ((n (gen-integer :min 0 :max 100))
 	    (m (gen-integer :min 0 :max 100)))
-    (let ((array (make-array (list n m)
-			     :element-type 'double-float
-			     :initial-contents
-			     (loop for i below n collect
-				  (loop for j below m collect
-				       (random 1d0)))))
-	  matrix1 matrix2 matrix3)
-      (setq matrix1 (make-matrix n m 'double :initial-contents array))
+    (let ((matrix1 (make-matrix n m 'double :initial-contents
+                                (random-array n m)))
+          matrix2 matrix3)
       (finishes (setq matrix2 (transpose matrix1)))
       (finishes (setq matrix3 (transpose matrix2)))
       (test-matrix-size matrix2 m n)
@@ -96,3 +97,25 @@
 	  (unless (= (mref matrix3 i j) (mref matrix1 i j))
 	    (fail "(mref matrix3 ~d ~d) is ~a, should be ~a"
 		  i j (mref matrix3 i j) (mref matrix1 i j))))))))
+
+(test window-double
+  (for-all ((n (gen-integer :min 0 :max 100))
+            (m (gen-integer :min 0 :max 100))
+            (n2 (gen-integer :min 0 :max 100) (<= n2 n))
+            (m2 (gen-integer :min 0 :max 100) (<= m2 m))
+            (row-offset (gen-integer :min 0 :max 100) (<= row-offset (- n n2)))
+            (col-offset (gen-integer :min 0 :max 100) (<= col-offset (- m m2))))
+    (let ((matrix1 (make-matrix n m 'double :initial-contents
+                                (random-array n m)))
+          matrix2)
+      (finishes (setq matrix2 (window matrix1 :nrows n2 :ncols m2
+                                      :offset0 row-offset
+                                      :offset1 col-offset)))
+      (test-matrix-size matrix2 n2 m2)
+      (dotimes (i n2)
+        (dotimes (j m2)
+          (unless (= (mref matrix1 (+ i row-offset) (+ j col-offset))
+                     (mref matrix2 i j))
+            (fail "(mref matrix2 ~d ~d) is ~a, should be ~a"
+                  i j (mref matrix1 (+ i row-offset) (+ j col-offset))
+                  (mref matrix2 i j))))))))
